--- a/client/styles/Home/Banner.module.scss
+++ b/client/styles/Home/Banner.module.scss
@@ -10,7 +10,6 @@
         flex-grow: 2;
         flex-shrink: 1;
         flex-basis: 0;
-        z-index: -1;
 
         .image {
             width: 100%;
